--- a/src/Forest OS/OS/Login/First Time Setup/Setup_Page3.resx
+++ b/src/Forest OS/OS/Login/First Time Setup/Setup_Page3.resx
@@ -117,32 +117,17 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Menu" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Menu.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Forest_OS_Logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Forest-OS_Logo.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Forest_OS_Logo_NoText" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Forest-OS_Logo_NoText.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Forest_OS_Logo1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Forest-OS_Logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Logout" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Logout.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Poweroff" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Poweroff.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Forest_OS_Logo_NoText1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Forest-OS_Logo_NoText.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Setup_Large" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Setup_Large.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Setup_Small" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Setup_Small.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Label3.Text" xml:space="preserve">
+    <value>Your account has been setup, and it is ready to be used! You can get started right away!
+
+Once you login, you can create more accounts to be used on the system. It is recommended that you do not use the same account for multiple people.
+
+Some of the features you can look forward to is:
+Accessing your web-browser,
+Accessing Windows Explorer,
+Using your personal file explorer, 
+And More!
+
+Click finish to head to the login page.</value>
   </data>
 </root>
