General Code Updates, Updated Console Code

--- a/src/Forest OS/OS/System/Crash/CrashScreen.resx
+++ b/src/Forest OS/OS/System/Crash/CrashScreen.resx
@@ -121,6 +121,6 @@
     <value>Forest-OS has returned you to Windows.
 If you would like to access Forest-OS again, open your start menu
 Find "Forest-OS", and click it. Or if it is on your desktop, double
-click the Icon. A detailed error message will now be displayed below.</value>
+click the Icon. A detailed error message will now be displayed below. You have also been logged out</value>
   </data>
 </root>
