--- a/src/Forest OS/My Project/Resources.resx
+++ b/src/Forest OS/My Project/Resources.resx
@@ -544,4 +544,7 @@
   <data name="zoom_out_40px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\zoom_out_40px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Wallpaper" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Wallpaper.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
